# storage/api-docs/api-docs.json
@@ -85,7 +85,7 @@
                                             "properties": {
                                                 "token": {
                                                     "type": "string",
-                                                    "example": "1|randomtoken123"
+                                                    "example": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vbG9jYWxob3N0OjgwMDAvYXBpL2F1dGgvbG9naW4iLCJpYXQiOjE3NjA5Nzc2NzksImV4cCI6MTc2MDk4MTI3OSwibmJmIjoxNzYwOTc3Njc5LCJqdGkiOiJwU1Z0ZDNrcEpxNDdSblpxIiwic3ViIjoiMDE5YTAwY2UtMWY3Yi03MDYxLWJkZDktNGNlZWMzYjIyODdmIiwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyJ9.zEn4wseQ0n67YD1Y3-F1ZaFwEmmkKodnTlZk9zM-4vU"
                                                 },
                                                 "type": {
                                                     "type": "string",
@@ -194,7 +194,7 @@
                         }
                     },
                     {
-                        "name": "title",
+                        "name": "search",
                         "in": "query",
                         "description": "Search title",
                         "required": false,
@@ -257,16 +257,16 @@
                 ]
             }
         },
-        "/api/tasks/{uuid}": {
+        "/api/tasks/{id}": {
             "get": {
                 "tags": [
                     "Tasks"
                 ],
                 "summary": "Show a task",
-                "operationId": "70cc51533dd6b3299b7e4412b2be5337",
+                "operationId": "90b3cd4d2d4b416dc989d2055dbed06c",
                 "parameters": [
                     {
-                        "name": "uuid",
+                        "name": "id",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -293,36 +293,6 @@
                     }
                 ]
             },
-            "delete": {
-                "tags": [
-                    "Tasks"
-                ],
-                "summary": "Delete a task",
-                "operationId": "98b37d208088545ecb5d28b97a1d44a4",
-                "parameters": [
-                    {
-                        "name": "uuid",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Deleted"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/tasks/{id}": {
             "put": {
                 "tags": [
                     "Tasks"
@@ -361,6 +331,34 @@
                                 }
                             }
                         }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "Delete a task",
+                "operationId": "ad582480cd57c2a4e3b6a426943eeca5",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Deleted"
                     }
                 },
                 "security": [
@@ -432,6 +430,102 @@
                     "title": {
                         "type": "string",
                         "example": "Updated"
+                    }
+                },
+                "type": "object"
+            },
+            "LogListResponse": {
+                "properties": {
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Log"
+                        }
+                    },
+                    "meta": {
+                        "properties": {
+                            "current_page": {
+                                "type": "integer",
+                                "example": 1
+                            },
+                            "per_page": {
+                                "type": "integer",
+                                "example": 10
+                            },
+                            "total": {
+                                "type": "integer",
+                                "example": 25
+                            },
+                            "last_page": {
+                                "type": "integer",
+                                "example": 3
+                            },
+                            "from": {
+                                "type": "integer",
+                                "example": 1
+                            },
+                            "to": {
+                                "type": "integer",
+                                "example": 10
+                            }
+                        },
+                        "type": "object"
+                    },
+                    "links": {
+                        "properties": {
+                            "first": {
+                                "type": "string",
+                                "example": "http://localhost:8000/api/tasks?page=1"
+                            },
+                            "last": {
+                                "type": "string",
+                                "example": "http://localhost:8000/api/tasks?page=3"
+                            },
+                            "prev": {
+                                "type": "string",
+                                "nullable": true
+                            },
+                            "next": {
+                                "type": "string",
+                                "example": "http://localhost:8000/api/tasks?page=2"
+                            }
+                        },
+                        "type": "object"
+                    }
+                },
+                "type": "object"
+            },
+            "LogResponse": {
+                "properties": {
+                    "data": {
+                        "$ref": "#/components/schemas/Log"
+                    }
+                },
+                "type": "object"
+            },
+            "Log": {
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "example": "0199e304-798d-72ad-8f41-80bdc6de0d90"
+                    },
+                    "title": {
+                        "type": "string",
+                        "example": "New Task"
+                    },
+                    "user_id": {
+                        "type": "string",
+                        "example": "0199dd17-88ea-7037-ba2d-cf60e784f928"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2025-10-14T13:59:05.000000Z"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2025-10-14T13:59:05.000000Z"
                     }
                 },
                 "type": "object"
